# property-finder

./: .gitignore  README.md  app.py  base_analyzer.py  data_analysis.py  download.py  format.py  geo_estate_analyzer.py  main.py  pyproject.toml  real_estate_data_processor.py  real_estate_search.py  search_params.py
.cursor/rules/: git.mdc
.streamlit/: secrets.toml
components/: ui_components.py
data/: data.parquet
data/raw_data/: 2010-13102.parquet  2010-13106.parquet  2010-13108.parquet  2011-13102.parquet  2011-13106.parquet  2011-13108.parquet  2012-13102.parquet  2012-13106.parquet  2012-13108.parquet  2013-13102.parquet  2013-13106.parquet  2013-13108.parquet  2014-13102.parquet  2014-13106.parquet  2014-13108.parquet  2015-13102.parquet  2015-13106.parquet  2015-13108.parquet  2016-13102.parquet  2016-13106.parquet  2016-13108.parquet  2017-13102.parquet  2017-13106.parquet  2017-13108.parquet  2018-13102.parquet  2018-13106.parquet  2018-13108.parquet  2019-13102.parquet  2019-13106.parquet  2019-13108.parquet  2020-13102.parquet  2020-13106.parquet  2020-13108.parquet  2021-13102.parquet  2021-13106.parquet  2021-13108.parquet  2022-13102.parquet  2022-13106.parquet  2022-13108.parquet  2023-13102.parquet  (+5 more)
